<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.msalah.herenow.activities.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4.0"
            android:layout_margin="@dimen/view_normal_margin">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:text="@string/here"
                android:layout_margin="@dimen/view_normal_margin"
                android:onClick="onClick"
                android:id="@+id/here" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:text="@string/options"
                android:layout_margin="@dimen/view_normal_margin"
                android:onClick="onClick"
                android:id="@+id/options" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4.0"
            android:layout_margin="@dimen/view_normal_margin">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:text="@string/positive_focuse"
                android:layout_margin="@dimen/view_normal_margin"
                android:onClick="onClick"
                android:id="@+id/positive" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:text="@string/priming_sounds"
                android:layout_margin="@dimen/view_normal_margin"
                android:onClick="onClick"
                android:id="@+id/priming" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/view_normal_margin"
        android:text="@string/user_manual"
        android:onClick="onClick"
        android:id="@+id/user" />

</RelativeLayout>
