<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_alarm_setter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.msalah.herenow.activities.AlarmSetter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_normal_margin"
        android:weightSum="4.0"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:layout_margin="@dimen/view_normal_margin"
            android:text="@string/hours"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:layout_margin="@dimen/view_normal_margin"
            android:text="@string/minutes"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4.0"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/view_normal_margin"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:layout_margin="@dimen/view_normal_margin"
            android:text="@string/set_call_time"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:layout_margin="@dimen/view_normal_margin"
            android:text="@string/minutes"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4.0"
        android:layout_marginLeft="@dimen/view_normal_margin"
        android:orientation="horizontal"
        android:id="@+id/linearLayout1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.0"
            android:layout_margin="@dimen/view_normal_margin"
            android:text="@string/call_status"/>

        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_margin="@dimen/view_normal_margin"
            android:text="@string/minutes"/>
    </LinearLayout>

    <Button
        android:text="@string/set_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_normal_margin"
        android:id="@+id/button2"
        />

</LinearLayout>
